better contour probably

--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -15,36 +15,16 @@ default: all
 $(LIB): $(OBJ)
 	ar -r $@ $?
 
-all: $(LIB) UDG GetPeaks Stack MSMAP ByProd GetInfo GetTheo SST
+all: $(LIB) UDG GetPeaks Stack MSMAP ByProd GetInfo GetTheo TE2Z
 
 PLOTLINES: $(OBJ) plot_lines.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) plot_lines.o $(LINK)
-
-SWS:	$(OBJ) sample_widths.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) sample_widths.o $(LINK)
-
-MM:	$(OBJ) map_minkowski.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) map_minkowski.o $(LINK)
 
 MM0:	$(OBJ) minkowski0.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) minkowski0.o $(LINK)
 
 MM1:	$(OBJ) minkowski1.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) minkowski1.o $(LINK)
-
-LLPW:	$(OBJ) lowl_power.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) lowl_power.o $(LINK)
-
-LLSCAN:	$(OBJ) lowl_scan.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) lowl_scan.o $(LINK)
-
-
-LLCORR:	$(OBJ) lowl_corr.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) lowl_corr.o $(LINK)
-
-HASYM: 	$(OBJ) hemiasym.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) hemiasym.o $(LINK)
-
 
 GetTheo:  $(OBJ) gettheo.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) gettheo.o $(LINK)
@@ -55,124 +35,54 @@ ACTTheo:  $(OBJ) acttheo.o
 GetPeaks:  $(OBJ) exportpeaks.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) exportpeaks.o $(LINK)
 
-FindExt: $(OBJ) find_extrema.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) find_extrema.o $(LINK)
-
 GetInfo: $(OBJ) getinfo.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) getinfo.o $(LINK)
 
 UDG: $(OBJ) udgrade.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) udgrade.o $(LINK)
 
-GetCl: $(OBJ) getcls.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) getcls.o $(LINK)
-
 Test: $(OBJ) test.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
 
-CCards: $(OBJ) change_cards.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) change_cards.o $(LINK)
-
-
-MPat: $(OBJ) merge_patches.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) merge_patches.o $(LINK)
-
-Inpaint: $(OBJ) testinp.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) testinp.o $(LINK)
-
-
-F2H: $(OBJ) flat2heal.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat2heal.o $(LINK)
-
-Rotate: $(OBJ) rotate_map.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) rotate_map.o $(LINK)
-
-Corr: $(OBJ) corr_map.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) corr_map.o $(LINK)
-
-Blend: $(OBJ) blend_map.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) blend_map.o $(LINK)
-
-
+CutPatch: $(OBJ) healpix2patch.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) healpix2patch.o $(LINK)
 
 SimuMaps: $(OBJ) simulate_maps.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) simulate_maps.o $(LINK)
 
-CatP: $(OBJ) peakcat.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) peakcat.o $(LINK)
-
-
-FullStack: $(OBJ) stack_fullsky.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) stack_fullsky.o $(LINK)
-
-
 Stack: $(OBJ) dostack.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) dostack.o $(LINK)
-
-StackFil: $(OBJ) stack_filaments.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) stack_filaments.o $(LINK)
-
-MST: 	$(OBJ) msst.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) msst.o $(LINK)
-
-SST: $(OBJ) sstack.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) sstack.o $(LINK)
-
 
 ByProd: $(OBJ) map_by_products.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) map_by_products.o $(LINK)
 
-
 MSMAP: $(OBJ) map_merge_split.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) map_merge_split.o $(LINK)
 
-FSpots:  $(OBJ) flat_exportspots.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_exportspots.o $(LINK)
-
-FStack:	 $(OBJ) flat_stack.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_stack.o $(LINK)
-
-FSim:	 $(OBJ) flat_sim.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_sim.o $(LINK)
-
-FMerge:	 $(OBJ) flat_merge.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_merge.o $(LINK)
-
-DoShell: $(OBJ) shells.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) shells.o $(LINK)	
+TE2Z: $(OBJ) te2zeta.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) te2zeta.o $(LINK)
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test FMerge Fsim FStack FSpots UDG Stack MSMAP SimuMaps DoShell SST MST ByProd GetInfo GetTheo GetPeaks Rotate Corr Inpaint LLPW MM SWS MM0 MM1 PLOTLINES CatP FullStack LLCORR LLSCAN GetCl CCards
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test PLOTLINES MSMAP ByProd Stack SimuMaps Geteaks GetInfo ACTTheo GetTheo MM0 MM1 TE2Z
 
 
 
 gettheo.o: $(LIB) $(OBJ)
 
-sstack.o: $(LIB) $(OBJ)
 
 test.o: $(LIB) $(OBJ)
 
-testinp.o: $(LIB) $(OBJ)
 
 exportpeaks.o: $(LIB) $(OBJ)
 
 dostack.o : $(LIB) $(OBJ)
 
-flat_exportspots.o: $(LIB) $(OBJ)
-
-flat_stack.o: $(LIB) $(OBJ)
-
-flat_merge.o: $(LIB) $(OBJ)
-
-trimcmp.o: $(LIB) $(OBJ)
-
 map_merge_split.o: $(LIB) $(OBJ)
 
 map_by_products.o: $(LIB) $(OBJ)
-
-corr_map.o:	$(LIB) $(OBJ)
 
 rotate_map.o:	$(LIB) $(OBJ)
 
 healgeo.o: stacking_obj.o
 
+te2z.o: $(LIB) $(OBJ)
