--- a/firstorder/Makefile
+++ b/firstorder/Makefile
@@ -26,15 +26,19 @@ CalcCls: $(OBJ) calc_cls.o $(BACKGROUND)/libcoopbackground.a
 CalcMP:  $(OBJ) calc_mp.o $(BACKGROUND)/libcoopbackground.a 
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) calc_mp.o $(LINK)
 
+ZetaCorr: $(OBJ) do_zeta_corr.o $(BACKGROUND)/libcoopbackground.a 
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) do_zeta_corr.o $(LINK)
+
 clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test CalcCls SolvePert CalcMP
 
 
 firstorder.o:	pertobj.o  ../include/firstorder_equations.h ../include/firstorder_source.h ../include/recfast_source.h ../include/recfast_head.h ../include/firstorder_basic_utils.h ../include/firstorder_ic.h ../include/firstorder_ic_EFT.h ../include/firstorder_equations_EFT.h
 wrapper.o: 	firstorder.o lensing.o Cls_post_process.o
-test.o:		wrapper.o
-test_one_mode.o: wrapper.o
+test.o:		$(OBJ)
+calc_cls.o: $(OBJ)
 Cls_post_process.o: firstorder.o lensing.o
-zeta.o:	wrapper.o
+zeta.o: $(OBJ)
 testzeta.o:	wrapper.o
-testcls.o: 	$(OBJ)
+solve_pert.o: 	$(OBJ)
+calc_mp.o:	$(OBJ)
