fixed a major bug for initial condition normalization
affect both background and perturbations.

--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -3,7 +3,7 @@ param[omch2] = 0.1196  0.05 0.2 0.01 0.01
 param[tau] = 0.07832564  0.01 0.3 0.01 0.01
 param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
 param[de_w] = -1.d0
-param[de_alpha_M0] = 0. -0.2 0.2 0.01 0.01
+param[de_alpha_M0] = 0.1 -0.2 0.2 0.01 0.01
 param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_T0] = 0. 
@@ -156,7 +156,7 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = chains/eftde
+cls_root = chains/alphaMp1
 
 use_CMB = T
 use_SN = T
@@ -164,5 +164,5 @@ use_BAO = T
 use_HST = T
 use_lensing = T
 cmb_dataset1 = ../data/cmb/hi_l/plik/plik_dx11dr2_HM_v18_TTTEEE.clik
-cmb_dataset2 = ../data/cmb/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5c_Ap.clik
+#cmb_dataset2 = ../data/cmb/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5c_Ap.clik
 cmb_lensing_dataset = ../data/cmb/lensing/smica_g30_ftl_full_pp.clik_lensing
