--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -160,5 +160,5 @@ use_lensing = T
 
 cmb_dataset1 = ../data/cmb/hi_l/plik/plik_dx11dr2_HM_v18_TTTEEE.clik
 cmb_dataset2 = ../data/cmb/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5c_Ap.clik
-cmb_dataset3 =  ../data/cmb/low_l/commander/commander_rc2_v1.1_l2_29_B.clik
+#cmb_dataset3 =  ../data/cmb/low_l/commander/commander_rc2_v1.1_l2_29_B.clik
 cmb_lensing_dataset = ../data/cmb/lensing/smica_g30_ftl_full_pp.clik_lensing
