--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -1,9 +1,9 @@
-param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
-param[omch2] = 0.1196  0.05 0.2 0.01 0.01
-param[tau] = 0.07832564  0.01 0.3 0.01 0.01
+param[ombh2] = 0.02225 0.005 0.1 0.001 0.001
+param[omch2] = 0.1198  0.05 0.2 0.01 0.01
+param[tau] = 0.079  0.01 0.3 0.01 0.01
 param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
 param[de_w] = -1.d0
-param[de_alpha_M0] = 0.1 -0.2 0.2 0.01 0.01
+param[de_alpha_M0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_T0] = 0. 
@@ -156,7 +156,8 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = chains/alphaMp1
+cls_root = chains/alphaMp0
+w_is_background = T
 
 use_CMB = T
 use_SN = T
