--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -1,14 +1,14 @@
 param[ombh2] = 0.02225 0.005 0.1 0.001 0.001
-param[omch2] = 0.1198  0.05 0.2 0.01 0.01
-param[tau] = 0.079  0.01 0.3 0.01 0.01
-param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
+param[omch2] = 0.12  0.05 0.2 0.003 0.003
+param[tau] = 0.06  0.01 0.3 0.01 0.01
+param[theta] = 1.0416 0.5  1.5 0.0001 0.0001
 param[de_w] = -1.d0
-param[de_alpha_M0] = 0. -0.2 0.2 0.01 0.01
+param[de_alpha_M0] = -0.2 -0.2 0.2 0.01 0.01
 param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_T0] = 0. 
 param[de_alpha_H0] = 0. 
-param[logAm2tau] = 2.911 2. 4. 0.0003 0.0003
+param[logAm2tau] = 2.9 2. 4. 0.0003 0.0003
 param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
 param[cib_index] = -1.3
@@ -156,14 +156,15 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = chains/alphaMp0
-w_is_background = T
+cls_root = chains/alphaMn1
+w_is_background = F
 
 use_CMB = T
 use_SN = T
 use_BAO = T
 use_HST = T
-use_lensing = T
+use_WL = T
+use_lensing = F
 cmb_dataset1 = ../data/cmb/hi_l/plik/plik_dx11dr2_HM_v18_TTTEEE.clik
 #cmb_dataset2 = ../data/cmb/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5c_Ap.clik
 cmb_lensing_dataset = ../data/cmb/lensing/smica_g30_ftl_full_pp.clik_lensing
