--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -2,11 +2,11 @@ param[ombh2] = 0.02222 0.005 0.1 0.001 0.001
 param[omch2] = 0.1197  0.05 0.2 0.003 0.003
 param[tau] = 0.078  0.01 0.3 0.01 0.01
 param[theta] = 1.04085 0.5  1.5 0.0001 0.0001
-param[de_w] = -1.06
+param[de_w] = -1.
 param[de_alpha_M0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
-param[de_alpha_T0] = 0. 
+param[de_alpha_T0] = 0.
 param[de_alpha_H0] = 0.
 param[logAm2tau] = 2.934 2. 4. 0.0003 0.0003
 param[ns] = 0.9655 0.5 1.5 0.008 0.008
@@ -156,7 +156,7 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = chains/alphaW_n1
+cls_root = chains/test
 
 w_is_background = F
 alpha_genre = omega
