uses 25 for better accuracy

--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -3,7 +3,7 @@ param[omch2] = 0.1197  0.05 0.2 0.003 0.003
 param[tau] = 0.078  0.01 0.3 0.01 0.01
 param[theta] = 1.04085 0.5  1.5 0.0001 0.0001
 param[de_w] = -1.
-param[de_alpha_M0] = 0. -0.2 0.2 0.01 0.01
+param[de_alpha_M0] = 0. -0.5 0.5 0.01 0.01
 param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_T0] = 0.
@@ -156,7 +156,7 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = chains/test
+cls_root = chains/lcdm
 
 w_is_background = F
 alpha_genre = omega
