output power spectrum at various redshifts

--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -156,10 +156,12 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = chains/lcdm
+cls_root = chains/eftdelcdm
+output_redshifts = 0.   0.5  1.  1.5  2.
 
 w_is_background = F
 alpha_genre = omega
+
 
 use_CMB = T
 use_SN = T
@@ -167,6 +169,9 @@ use_BAO = T
 use_HST = T
 use_WL = F
 use_lensing = F
+#Planck TT
 cmb_dataset1 = ../data/cmb/hi_l/plik/plik_dx11dr2_HM_v18_TT.clik
+#Planck lowP
 #cmb_dataset2 = ../data/cmb/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5c_Ap.clik
+#Planck lensing
 cmb_lensing_dataset = ../data/cmb/lensing/smica_g30_ftl_full_pp.clik_lensing
