fix say plotting legend bug

--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -156,7 +156,7 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = chains/eftdelcdm
+cls_root = chains/lcdm
 output_redshifts = 0.   0.5  1.  1.5  2.
 
 w_is_background = F
