--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -13,7 +13,7 @@ root = test
 #output variables (for SolvePert)
 variables = lna Phi Psi delta_c v_c delta_b v_b
 #for EFT dark energy
-variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu Hpi H
+#variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu Hpi H
 
 #======parameters====================
 #physical density of baryon at z  = 0; in the EFT dark energy description, this is actually \Omega_b h^2 (M_*^2/M_p)^2
