--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -11,9 +11,32 @@ output = output.dat
 root = test
 
 #output variables (for SolvePert)
-variables = lna Phi Psi delta_c v_c delta_b v_b
-#for EFT dark energy
+##options are:
+## a = a
+## lna = \ln a
+## tau = H_0 * conformal time
+## t = H_0 * age
+## H = H / H_0
+## Ha = H a / (H_0 a_0)
+## T00 = T_{00} a^2
+## T0i = T_{0i} a^2
+## G00 = G_{00} a^2
+## G0i = G_{0i} a^2
+## Phi = Newtonial potential
+## Psi = Space Curvature
+## delta_c = CDM density perturbation in Newtonian gauge
+## v_c = CDM velocity
+## delta_c_sync = CDM density perturbation in comoving synchronous gauge
+## delta_b = baryon density perturbation in Newtonian gauge
+## v_b = baryon velocity in Newtonian gauge
+## delta_g = radiation density perturbation
+## v_g = radiation fluid velocity
+## delta_nu = (massless) neutrino density perturbation
+## v_nu = (massless) neutrino velocity
+## Hpi = H pi (pi as defined in EFT dark energy)
+variables = lna T00 G00 T0i G0i Phi Psi 
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu Hpi H
+
 
 #======parameters====================
 #physical density of baryon at z  = 0; in the EFT dark energy description, this is actually \Omega_b h^2 (M_*^2/M_p)^2
