--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -33,8 +33,8 @@ root = test
 ## v_g = radiation fluid velocity
 ## delta_nu = (massless) neutrino density perturbation
 ## v_nu = (massless) neutrino velocity
-## Hpi = H pi (pi as defined in EFT dark energy)
-variables = lna T00 G00 T0i G0i Phi Psi 
+## pi = pi (pi as defined in EFT dark energy)
+variables = lna T00 G00 T0i G0i Phi Psi pi
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu Hpi H
 
 
@@ -61,7 +61,7 @@ w_is_background = F
 
 #EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in)
 de_alpha_M0 = 0.
-de_alpha_K0 = 0.
+de_alpha_K0 = 0.2
 de_alpha_B0 = 0.
 de_alpha_T0 = 0.
 de_alpha_H0 = 0.
