--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -12,7 +12,8 @@ root = test
 
 #output variables (for SolvePert)
 ##options are:
-## a = a
+## a = scale factor (normalized to a_0 = 1 today)
+## z = redshift
 ## lna = \ln a
 ## tau = H_0 * conformal time
 ## t = H_0 * age
@@ -24,6 +25,8 @@ root = test
 ## G0i = G_{0i} a^2
 ## Phi = Newtonial potential
 ## Psi = Space Curvature
+## dPsidlna = d Psi / d ln a
+## dPhidlna = d Phi / d ln a
 ## delta_c = CDM density perturbation in Newtonian gauge
 ## v_c = CDM velocity
 ## delta_c_sync = CDM density perturbation in comoving synchronous gauge
