--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -1,14 +1,11 @@
-##this ini file can be used for SolvePert or CalcCls
+##this ini file can be used for SolvePert, CalcCls and CalcMP
 
+
+#root for output files 
+root = test
 
 # the wave number; COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here. (for SolvePert)
 kMpc = 0.05
-
-#output file (for SolvePert)
-output = output.dat
-
-#root for Cl files (for CalcCls)
-root = test
 
 #output variables (for SolvePert)
 ##options are:
