enabled theta option

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -43,8 +43,14 @@ variables = lna T00 G00 T0i G0i Phi Psi pi
 ombh2 = 0.02222
 #physical density of CDM at z  = 0; in the EFT dark energy description, this is actually \Omega_c h^2 (M_*^2/M_p)^2
 omch2 = 0.1197
+
 #Hubble parameter
 H0 = 70.
+#if you want to keep the primary CMB anistropy fixed, it is better to fix theta instead of H0
+#theta (in unit of 1/100) is only used when H0 is commented out 
+#theta = 1.04085
+
+
 #reionization optical depth
 tau = 0.078
 
