allow output alpha functions

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,7 +2,7 @@
 
 
 #root for output files 
-root = test
+root = testQ0
 
 # the wave number; COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here. (for SolvePert)
 kMpc = 0.05
@@ -33,9 +33,9 @@ kMpc = 0.05
 ## v_g = radiation fluid velocity
 ## delta_nu = (massless) neutrino density perturbation
 ## v_nu = (massless) neutrino velocity
-## pi = pi (pi as defined in EFT dark energy)
-variables = lna T00 G00 T0i G0i Phi Psi pi
-#variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu Hpi H
+## pi = pi (pi as defined in EFT dark energy, in unit of H0^{-1})
+variables = lna T00 G00 T0i G0i Phi Psi
+#variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H
 
 
 #======parameters====================
@@ -45,10 +45,10 @@ ombh2 = 0.02222
 omch2 = 0.1197
 
 #Hubble parameter
-H0 = 70.
+#H0 = 70.
 #if you want to keep the primary CMB anistropy fixed, it is better to fix theta instead of H0
 #theta (in unit of 1/100) is only used when H0 is commented out 
-#theta = 1.04085
+theta = 1.04085
 
 
 #reionization optical depth
@@ -60,14 +60,21 @@ As = 2.22e-9
 ns = 0.9655
 
 #dark energy equation of state
+#standard w = w_0 + w_a (1-a)
 de_w = -1.
 de_wa = 0.
-#if w is defined as the effective background w that gives the same expansion history in wCDM model
+##if the standard w0wa parametrization is commented out, uses the quintessence motivated (for DARK_ENERGY_MODEL = COUPLED_DE)
+#de_epss = 0.1d0
+#de_epsinf = 0.d0
+#de_zetas = 0.d0
+#de_betas = 6.d0
+
+#if w is defined as the effective background w that gives the same expansion history in wCDM model (only matters when alpha_M is nonzero)
 w_is_background = F
 
 #EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in)
 de_alpha_M0 = 0.
-de_alpha_K0 = 0.2
+de_alpha_K0 = 0.
 de_alpha_B0 = 0.
 de_alpha_T0 = 0.
 de_alpha_H0 = 0.
