enable new parametrization
use c_s^2 and r_B etc.

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,7 +2,7 @@
 
 
 #root for output files 
-root = testQ0
+root = test
 
 # the wave number; COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here. (for SolvePert)
 kMpc = 0.05
@@ -33,9 +33,17 @@ kMpc = 0.05
 ## v_g = radiation fluid velocity
 ## delta_nu = (massless) neutrino density perturbation
 ## v_nu = (massless) neutrino velocity
-## pi = pi (pi as defined in EFT dark energy, in unit of H0^{-1})
-variables = lna T00 G00 T0i G0i Phi Psi
-#variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H
+## pi = pi (pi as defined for EFT dark energy, in unit of H0^{-1})
+## DE_alpha (alpha = alpha_K + 6 alpha_B^2 for EFT dark energy)
+## DE_alpha_cs2 (alpha * c_s^2 for EFT dark energy)
+## DE_alpha_M (alpha_M for EFT dark energy)
+## DE_alpha_T (alpha_T for EFT dark energy)
+## DE_alpha_K (alpha_K for EFT dark energy)
+## DE_alpha_B (alpha_B for EFT dark energy)
+## DE_alpha_H (alpha_H for EFT dark energy)
+## DE_M_star  (M* / M_p for EFT dark energy)
+variables = lna Phi Psi 
+#variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 
 
 #======parameters====================
@@ -61,7 +69,7 @@ ns = 0.9655
 
 #dark energy equation of state
 #standard w = w_0 + w_a (1-a)
-de_w = -1.
+de_w = -0.99
 de_wa = 0.
 ##if the standard w0wa parametrization is commented out, uses the quintessence motivated (for DARK_ENERGY_MODEL = COUPLED_DE)
 #de_epss = 0.1d0
@@ -69,13 +77,20 @@ de_wa = 0.
 #de_zetas = 0.d0
 #de_betas = 6.d0
 
-#if w is defined as the effective background w that gives the same expansion history in wCDM model (only matters when alpha_M is nonzero)
+#if w is defined as the effective background w that gives the same expansion history in wCDM model (only matters when alpha_M is nonzero); 
 w_is_background = F
 
-#EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in)
+#EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in);
+##use c_s^2 to parameterize alpha's. In this case w_is_background is forced to be true and you need to set w = constant (de_wa = 0)
+de_cs2 = 0.9
+de_r_B  = -0.1
+de_r_M = 0.1
+de_r_H = 0.
+de_r_T = 0.
+###if de_cs2 is commented out, use the simple parametrization
 de_alpha_M0 = 0.
 de_alpha_K0 = 0.
-de_alpha_B0 = 0.
+de_alpha_B0 = -0.1
 de_alpha_T0 = 0.
 de_alpha_H0 = 0.
 #Coupled CDM-DE (you have to compile the code with DARK_ENERGY_MODEL = COUPLED_DE in configure.in)
