--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -42,7 +42,7 @@ kMpc = 0.05
 ## DE_alpha_B (alpha_B for EFT dark energy)
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
-variables = lna Phi Psi 
+variables = lna Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 
 
@@ -69,7 +69,7 @@ ns = 0.9655
 
 #dark energy equation of state
 #standard w = w_0 + w_a (1-a)
-de_w = -0.99
+de_w = -0.9
 de_wa = 0.
 ##if the standard w0wa parametrization is commented out, uses the quintessence motivated (for DARK_ENERGY_MODEL = COUPLED_DE)
 #de_epss = 0.1d0
@@ -84,7 +84,7 @@ w_is_background = F
 ##use c_s^2 to parameterize alpha's. In this case w_is_background is forced to be true and you need to set w = constant (de_wa = 0)
 de_cs2 = 0.9
 de_r_B  = -0.1
-de_r_M = 0.1
+de_r_M = 0.
 de_r_H = 0.
 de_r_T = 0.
 ###if de_cs2 is commented out, use the simple parametrization
