--- a/test/Makefile
+++ b/test/Makefile
@@ -4,20 +4,17 @@ COOPLIB=../lib
 include ../configure.in
 include ../compile_rules.in
 
-Example1: example1.o
+Ex1: example1.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ example1.o $(LINK)
 
-Example2: example2.o
+Ex2: example2.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ example2.o $(LINK)
 
-Check: check_perturbation5.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ check_perturbation5.o $(LINK)
-
-Quint: quintessence.o
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ quintessence.o $(LINK)
+Ex3: example3.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ example3.o $(LINK)
 
 Test:	test.o 
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ test.o $(LINK)
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test Example1 Example2 *.txt *.pdf
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test Ex1 Ex2 Ex3
