--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -82,11 +82,13 @@ w_is_background = F
 
 #EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in);
 ##use c_s^2 to parameterize alpha's. In this case w_is_background is forced to be true and you need to set w = constant (de_wa = 0)
-de_cs2 = 0.9
-de_r_B  = -2.
+de_cs2 = 0.001
+de_r_B  = 0.
 de_r_M = 0.
 de_r_H = 0.
 de_r_T = 0.
+#the code searches solution in the range 0< alpha_K0 + 6 alpha_B0^2 < alpha0_max; set alpha0_max here
+de_alpha0_max = 1.
 ###if de_cs2 is commented out, use the simple parametrization
 de_alpha_M0 = 0.
 de_alpha_K0 = 0.
