fix f(k) output bug
fixed output variables as a function of k

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,17 +2,13 @@
 
 
 #root for output files 
-root = test
+root = ../../coop_output/test
 
-# fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
-#kMpc = 0.05
-#output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-output_redshift = 1.
-
+# the wave number; COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here. (for SolvePert)
+kMpc = 0.02
 
 #output variables (for SolvePert)
 ##options are:
-## kMpc = wave number k in unit of Mpc^{-1}
 ## a = scale factor (normalized to a_0 = 1 today)
 ## z = redshift
 ## lna = \ln a
@@ -46,8 +42,8 @@ output_redshift = 1.
 ## DE_alpha_B (alpha_B for EFT dark energy)
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
-variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
-#variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
+# variables = lna Phi Psi DE_cs2 DE_alpha  DE_alpha_B
+variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 
 
 #======parameters====================
@@ -81,19 +77,16 @@ de_wa = 0.
 #de_zetas = 0.d0
 #de_betas = 6.d0
 
-#if w is defined as the effective background w that gives the same expansion history in wCDM model (only matters when alpha_M is nonzero); However, when you are using cs^2, r_B/M/H/T parametrization (see below), this line is ignored and w_is_background is always forced to be T. 
+#if w is defined as the effective background w that gives the same expansion history in wCDM model (only matters when alpha_M is nonzero); 
 w_is_background = F
 
 #EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in);
 ##use c_s^2 to parameterize alpha's. In this case w_is_background is forced to be true and you need to set w = constant (de_wa = 0)
-de_cs2 = 0.9
+de_cs2 = 0.25
 de_r_B  = 0.
-de_r_M = 0.1
+de_r_M = 0.01
 de_r_H = 0.
 de_r_T = 0.
-#the code searches solution in the range 0< alpha_K0 + 6 alpha_B0^2 < alpha0_max; set alpha0_max here:
-de_alpha0_max = 100.
-
 ###if de_cs2 is commented out, use the simple parametrization
 de_alpha_M0 = 0.
 de_alpha_K0 = 0.
