--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -7,7 +7,7 @@ root = test
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 kMpc = 0.05
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-#output_redshift = 0.
+#output_redshift = 0.2
 
 
 #output variables (for SolvePert)
@@ -46,7 +46,7 @@ kMpc = 0.05
 ## DE_alpha_B (alpha_B for EFT dark energy)
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
-variables  =  lna Phi Psi
+variables  =  kMpc Phi Psi
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 #variables = kMpc T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
@@ -88,10 +88,10 @@ w_is_background = T
 
 #EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in);
 ##use c_s^2 to parameterize alpha's. In this case w_is_background is forced to be true and you need to set w = constant (de_wa = 0)
-#de_cs2 = 1.
+de_cs2 = 1.
 de_r_B  = 0.
 de_r_M = 0.
-de_r_H = 0.05
+de_r_H = 0.
 de_r_T = 0.
 #the code searches solution in the range 0< alpha_K0 + 6 alpha_B0^2 < alpha0_max; set alpha0_max here:
 de_alpha0_max = 100.
