--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -62,7 +62,8 @@ FStack: $(OBJ) flat_stack.o
 FStat:  $(OBJ) flat_stat.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_stat.o $(LINK)
 
-
+F2Heal:  $(OBJ) flat2heal.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat2heal.o $(LINK)
 
 ByProd: $(OBJ) map_by_products.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) map_by_products.o $(LINK)
