--- a/mapio/params_coadd.ini
+++ b/mapio/params_coadd.ini
@@ -4,22 +4,24 @@
 num_maps = 4
 
 #map files
-map1 = 
-map2 = 
-map3 = 
-map4 = 
+map1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_1100_I.fits 
+map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_I.fits 
+map3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_1100_I.fits 
+map4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 
 #weight files
-weight1 = 
-weight2 = 
-weight3 = 
-weight4 =
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 
 #output
-output_map = 
-output_weight = 
+output_map = act16/deep56_coadd_I.fits
+output_weight = act16/deep56_weight_I.fits
 
 ##other settings
+#truncate when weight < mean weight * X, set X below
+truncate_weight = 0.3
 
 #always take the absolute value of the weight map
 positive_weights = T
