--- a/mapio/params_coadd_Q.ini
+++ b/mapio/params_coadd_Q.ini
@@ -3,6 +3,18 @@
 #total number of maps
 num_maps = 4
 
+#highpass filter
+highpass_lmin = 250
+
+#lowpass_filter 
+lowpass_lmax = 3000
+
+#gaussian smoothing
+fwhm_arcmin = 0.5d0
+
+#regularize outliers
+reg_limit = 0.0005
+
 #map files
 map1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_1100_Q.fits 
 map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_Q.fits 
