--- a/mapio/params_coadd_I.ini
+++ b/mapio/params_coadd_I.ini
@@ -3,6 +3,18 @@
 #total number of maps
 num_maps = 4
 
+#highpass filter
+highpass_lmin = 250
+
+#lowpass_filter 
+lowpass_lmax = 3000
+
+#gaussian smoothing
+fwhm_arcmin = 0.5d0
+
+#regularize outliers
+reg_limit = 0.0005
+
 #map files
 map1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_I.fits 
@@ -16,7 +28,7 @@ weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_b
 weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 
 #output
-output_map = act16/deep56_coadd_I.fits
+output_map = act16/deep56_ar2_coadd_I.fits
 output_weight = act16/deep56_weight_I.fits
 
 ##other settings
