--- a/mapio/params_coadd_I.ini
+++ b/mapio/params_coadd_I.ini
@@ -33,10 +33,10 @@ output_weight = act16/deep56_weight_I.fits
 
 ##other settings
 #analyze each map and print simple statistics
-analyze_maps = F
+analyze_maps = T
 
 #truncate when weight < mean weight * X, set X below
-truncate_weight = 0.8
+truncate_weight = 0.5
 
 #always take the absolute value of the weight map
 positive_weights = T
