--- a/mapio/params_coadd_Q.ini
+++ b/mapio/params_coadd_Q.ini
@@ -3,6 +3,29 @@
 #total number of maps
 num_maps = 4
 
+
+#map files
+map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_Q.fits
+map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_Q.fits
+map3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_Q.fits
+map4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_Q.fits
+
+#weight files
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
+weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
+weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
+weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
+
+#output
+output_map = act16/deep56_coadd_Q.fits
+output_weight = act16/deep56_weight_Q.fits
+
+##other settings
+
+#================ filtering ===================
+#do filtering
+do_filtering = F
+
 #highpass filter
 highpass_lmin = 250
 
@@ -12,37 +35,23 @@ lowpass_lmax = 3000
 #gaussian smoothing
 fwhm_arcmin = 0.5d0
 
+#===================================================
 #regularize outliers
-reg_limit = 0.0005
+reg_limit = 0.01
 
-#map files
-map1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_1100_Q.fits 
-map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_Q.fits 
-map3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_1100_Q.fits 
-map4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_Q.fits 
-
-#weight files
-weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-
-#output
-output_map = act16/deep56_coadd_Q.fits
-output_weight = act16/deep56_weight_Q.fits
-
-##other settings
+#=====================================================
 #analyze each map and print simple statistics
 analyze_maps = F
 
+#======================================================
 #truncate when weight < mean weight * X, set X below
-truncate_weight = 0.5
+truncate_weight = 0.3
 
-#always take the absolute value of the weight map
-positive_weights = T
+#check if the weight map is positive
+positive_weights = F
 
-#multiply the weight map by some coefficients
-coef1 = 1.
-coef2 = 1.
-coef3 = 1.
-coef4 = 1.
+#multiply the map by some coefficients
+#coef1 = 1.
+#coef2 = 1.
+#coef3 = 1.
+#coef4 = 1.
