--- a/mapio/params_coadd_single.ini
+++ b/mapio/params_coadd_single.ini
@@ -1,47 +1,47 @@
 #this parameter file is used by FCoadd
 
 #total number of maps
-num_maps = 2
+num_maps = 1
 
 #map files
-map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_500_I.fits 
-map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_input_used_I.fits
+map1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
+#map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_input_used_U.fits
 #map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 #map3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 #map4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 
 #weight files
-#weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 
 #output
-output_map = act16/deep56_set_0_I.fits
+output_map = act16/deep56_filtered_set_3_I.fits
 #output_weight = act16/deep56_weight_I.fits
 
 ##other settings
 #==================== filtering =============================
 #if you want to do filtering
-do_filtering = F
+do_filtering = T
 
 #highpass filter
-highpass_lmin = 20
+highpass_lmin = 1000
 
 #lowpass_filter 
 lowpass_lmax = 4000
 
 #gaussian smoothing
-fwhm_arcmin = 0.d0
+fwhm_arcmin = 3.
 
 #============================================================
 #regularize outliers
-reg_limit = 0
+reg_limit = 0.0005
 
 
 #===========================================================
 #analyze each map and print simple statistics
-analyze_maps = F
+analyze_maps = T
 
 #===========================================================
 #truncate when weight < mean weight * X, set X below
@@ -53,7 +53,7 @@ positive_weights = F
 
 #===========================================================
 #multiply the weight map by some coefficients
-coef1 = 2.
-coef2 = 2.
+#coef1 = 1.
+#coef2 = 1.
 #coef3 = 1.
 #coef4 = 1.
