--- a/mapio/params_coadd.ini
+++ b/mapio/params_coadd.ini
@@ -1,23 +1,22 @@
 #this parameter file is used by FCoadd
 
 #total number of maps
-num_maps = 2
+num_maps = 4
 
 #map files
-map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_500_I.fits 
-map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_input_used_I.fits
-#map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_I.fits 
-#map3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_1100_I.fits 
-#map4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
+map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_U.fits
+map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_U.fits
+map3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_U.fits
+map4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_U.fits
 
 #weight files
-#weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-#weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-#weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-#weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+#weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_I.fits
+#weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits
+#weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits
+#weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits
 
 #output
-output_map = act16/deep56_set_0_I.fits
+output_map = act16/deep56_array_2_noise_sim_1_U.fits
 #output_weight = act16/deep56_weight_I.fits
 
 ##other settings
@@ -53,7 +52,7 @@ positive_weights = F
 
 #===========================================================
 #multiply the weight map by some coefficients
-coef1 = 2.
-coef2 = 2.
-#coef3 = 1.
-#coef4 = 1.
+coef1 = 1.
+coef2 = 1.
+coef3 = -1.
+coef4 = -1.
