--- a/mapio/params_coadd_single.ini
+++ b/mapio/params_coadd_single.ini
@@ -4,20 +4,20 @@
 num_maps = 1
 
 #map files
-map1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
+map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_500_I.fits 
 #map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_input_used_U.fits
 #map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 #map3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 #map4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 
 #weight files
-weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 
 #output
-output_map = act16/deep56_filtered_set_3_I.fits
+output_map = act16/tmp.fits
 #output_weight = act16/deep56_weight_I.fits
 
 ##other settings
@@ -26,13 +26,13 @@ output_map = act16/deep56_filtered_set_3_I.fits
 do_filtering = T
 
 #highpass filter
-highpass_lmin = 1000
+highpass_lmin = 20
 
 #lowpass_filter 
-lowpass_lmax = 4000
+lowpass_lmax = 3000
 
 #gaussian smoothing
-fwhm_arcmin = 3.
+fwhm_arcmin = 20.
 
 #============================================================
 #regularize outliers
