--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -71,6 +71,9 @@ FCoadd:  $(OBJ) flat_coadd.o
 FMask:  $(OBJ) flat_mask.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_mask.o $(LINK)
 
+FSim:  $(OBJ) flat_sim.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_sim.o $(LINK)
+
 
 ByProd: $(OBJ) map_by_products.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) map_by_products.o $(LINK)
