--- a/mapio/params_coadd_U.ini
+++ b/mapio/params_coadd_U.ini
@@ -17,27 +17,27 @@ weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8
 weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_UU.fits
 
 #output
-output_map = act16/deep56_coadd_U.fits
-output_weight = act16/deep56_weight_U.fits
+output_map = act16/deep56_coadd_U_smooth.fits
+output_weight = act16/deep56_weight_U_smooth.fits
 
 ##other settings
 
 #================ filtering ===================
 #do filtering
-do_filtering = F
+do_filtering = T
 
 #highpass filter
-highpass_lmin = 250
+highpass_lmin = 550
 
 #lowpass_filter 
-lowpass_lmax = 3000
+lowpass_lmax = 2500
 
 #gaussian smoothing
-fwhm_arcmin = 0.5d0
+fwhm_arcmin = 3.d0
 
 #===================================================
 #regularize outliers
-reg_limit = 0.01
+reg_limit = 0.0005
 
 #=====================================================
 #analyze each map and print simple statistics
