--- a/mapio/params_coadd_single.ini
+++ b/mapio/params_coadd_single.ini
@@ -4,20 +4,21 @@
 num_maps = 1
 
 #map files
-map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_500_I.fits 
-#map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_input_used_U.fits
+map1 = act16/set3_I.fits
+#map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_input_used_I.fits 
+#map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_input_used_I.fits
 #map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 #map3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 #map4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
 
 #weight files
-weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+#weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 #weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
 
 #output
-output_map = act16/tmp.fits
+output_map = act16/sum_set3.fits
 #output_weight = act16/deep56_weight_I.fits
 
 ##other settings
@@ -26,22 +27,22 @@ output_map = act16/tmp.fits
 do_filtering = T
 
 #highpass filter
-highpass_lmin = 20
+highpass_lmin = 550
 
 #lowpass_filter 
 lowpass_lmax = 3000
 
 #gaussian smoothing
-fwhm_arcmin = 20.
+fwhm_arcmin = 5.
 
 #============================================================
 #regularize outliers
-reg_limit = 0.0005
+reg_limit = 0.0001
 
 
 #===========================================================
 #analyze each map and print simple statistics
-analyze_maps = T
+analyze_maps = F
 
 #===========================================================
 #truncate when weight < mean weight * X, set X below
