--- a/mapio/params_coadd_I.ini
+++ b/mapio/params_coadd_I.ini
@@ -11,33 +11,38 @@ map3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec
 map4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_I.fits
 
 #weight files
-weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_I.fits
-weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits
-weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits
-weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
+weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
+weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
+weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
 
 #output
-output_map = act16/deep56_coadd_I_smooth.fits
-output_weight = act16/deep56_weight_I_smooth.fits
+output_map = act16/deep56_coadd_I.fits
+output_weight = act16/deep56_weight_I.fits
 
 ##other settings
 
 #================ filtering ===================
 #do filtering
-do_filtering = T
+do_filtering = F
 
 #highpass filter
-highpass_lmin = 550
+highpass_lmin = 100
+
+#l_x min
+lx_min = 50
+#l_y min
+ly_min = 80
 
 #lowpass_filter 
-lowpass_lmax = 2500
+lowpass_lmax = 3000
 
 #gaussian smoothing
-fwhm_arcmin = 3.d0
+fwhm_arcmin = 0.d0
 
 #===================================================
 #regularize outliers
-reg_limit = 0.0005
+reg_limit = 0.001
 
 #=====================================================
 #analyze each map and print simple statistics
