--- a/mapio/params_coadd_Q.ini
+++ b/mapio/params_coadd_Q.ini
@@ -11,20 +11,20 @@ map3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec
 map4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_Q.fits
 
 #weight files
-weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
-weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
-weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
-weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_QQ.fits
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_nobad_weights_QQ.fits
+weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_nobad_weights_QQ.fits
+weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_nobad_weights_QQ.fits
+weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_nobad_weights_QQ.fits
 
 #output
-output_map = act16/deep56_coadd_Q_smooth.fits
-output_weight = act16/deep56_weight_Q_smooth.fits
+output_map = act16/deep56_coadd_Q.fits
+output_weight = act16/deep56_weight_Q.fits
 
 ##other settings
 
 #================ filtering ===================
 #do filtering
-do_filtering = T
+do_filtering = F
 
 #highpass filter
 highpass_lmin = 550
@@ -37,7 +37,7 @@ fwhm_arcmin = 3.d0
 
 #===================================================
 #regularize outliers
-reg_limit = 0.0005
+reg_limit = 0.005
 
 #=====================================================
 #analyze each map and print simple statistics
