--- a/mapio/params_coadd_single.ini
+++ b/mapio/params_coadd_single.ini
@@ -3,56 +3,59 @@
 #total number of maps
 num_maps = 1
 
+
 #map files
-#map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_input_used_I.fits 
-#map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_input_used_I.fits
-#map2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_1100_I.fits 
-#map3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_1100_I.fits 
-#map4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_1100_I.fits 
+map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_Q.fits
+map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_I.fits
+map3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_I.fits
+map4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_I.fits
 
 #weight files
-#weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-#weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-#weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits 
-#weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits 
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_nobad_weights_QQ.fits
+weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
+weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
+weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
 
 #output
-output_map = act16/sum_set3.fits
-#output_weight = act16/deep56_weight_I.fits
+output_map = act16/deep56_set0_Q.fits
+output_weight = act16/set0_weight_Q.fits
 
 ##other settings
-#==================== filtering =============================
-#if you want to do filtering
-do_filtering = T
+
+#================ filtering ===================
+#do filtering
+do_filtering = F
 
 #highpass filter
-highpass_lmin = 550
+highpass_lmin = 100
+
+#l_x min
+lx_min = 50
+#l_y min
+ly_min = 80
 
 #lowpass_filter 
 lowpass_lmax = 3000
 
 #gaussian smoothing
-fwhm_arcmin = 5.
+fwhm_arcmin = 0.d0
 
-#============================================================
+#===================================================
 #regularize outliers
-reg_limit = 0.0001
+reg_limit = 0.001
 
-
-#===========================================================
+#=====================================================
 #analyze each map and print simple statistics
 analyze_maps = F
 
-#===========================================================
+#======================================================
 #truncate when weight < mean weight * X, set X below
-truncate_weight = 0.1
+truncate_weight = 0.3
 
-#===========================================================
-#always take the absolute value of the weight map
+#check if the weight map is positive
 positive_weights = F
 
-#===========================================================
-#multiply the weight map by some coefficients
+#multiply the map by some coefficients
 #coef1 = 1.
 #coef2 = 1.
 #coef3 = 1.
