--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -68,6 +68,9 @@ FStat:  $(OBJ) flat_stat.o
 F2Heal:  $(OBJ) flat2heal.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat2heal.o $(LINK)
 
+FSmooth:  $(OBJ) flat_smooth.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_smooth.o $(LINK)
+
 FCoadd:  $(OBJ) flat_coadd.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_coadd.o $(LINK)
 
