--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -68,7 +68,7 @@ FStat:  $(OBJ) flat_stat.o
 FQU2EB:  $(OBJ) flat_qu2eb.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_qu2eb.o $(LINK)
 
-FQU2EB:  $(OBJ) flat_eb2qu.o
+FEB2QU:  $(OBJ) flat_eb2qu.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_eb2qu.o $(LINK)
 
 F2Heal:  $(OBJ) flat2heal.o
@@ -76,6 +76,9 @@ F2Heal:  $(OBJ) flat2heal.o
 
 FSmooth:  $(OBJ) flat_smooth.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_smooth.o $(LINK)
+
+FMerge:  $(OBJ) flat_merge.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_merge.o $(LINK)
 
 FCoadd:  $(OBJ) flat_coadd.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) flat_coadd.o $(LINK)
@@ -97,7 +100,7 @@ TE2Z: $(OBJ) te2zeta.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) te2zeta.o $(LINK)
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test PLOTLINES UDG GetPeaks Stack MSMAP ByProd GetInfo GetTheo TE2Z GAUSS MM0 MM1 FStack FStat F2Heal FCoadd ACTTheo FMask FGetPeaks FQU2EB FEB2QU FSmooth
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test PLOTLINES UDG GetPeaks Stack MSMAP ByProd GetInfo GetTheo TE2Z GAUSS MM0 MM1 FStack FStat F2Heal FCoadd ACTTheo FMask FGetPeaks FQU2EB FEB2QU FSmooth FMerge
 
 
 
