--- a/utils/Makefile
+++ b/utils/Makefile
@@ -9,7 +9,7 @@ LIB = libcooputils.a
 OBJ = MPIutils.o evalstr.o  specfunc.o list.o random.o cholesky.o matrix.o interpolation.o integrate.o ode.o file_io.o ndprob.o asy.o  fft.o jlbrute.o  inifile.o gaussian_peak.o  wrapper.o 
 #jllpm.o  threejs.o
 
-default: $(LIB)
+default: $(LIB) MPLOT
 
 $(LIB): $(OBJ) 
 	ar -r $@ $?
